# advent-of-code-2021-ocaml

./: .gitignore  Makefile  advent_of_code_2021_ocaml.opam  advent_of_code_2021_ocaml.opam.locked  dune-project
lib/: dune
test/: dune
