opam-version: "2.0"
synopsis: "Advent of code 2021 in OCaml"
# description: """
# """
# # maintainer: ""
# authors: ""
license: "Unlicense"
# homepage: ""
# bug-reports: ""
depends: [
  "dune" {>= "2.9.1"}
  "base" {>= "0.14.2"}
  "stdio" {>= "0.14.0"}
  "re" {>= "1.10.3"}
  "containers" {>= "3.6.1"}
  "containers-data" {>= "3.6.1"}
  "owl" {>= "1.0.1"}
]
build: ["dune" "build" "-p" name "-j" jobs]
# dev-repo: ""
